[package]
name = "SancrySentLePoney"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.31.0"
shuttle-runtime = "0.31.0"
shuttle-secrets = "0.31.0"
shuttle-persist = "0.31.0"
shuttle-shared-db = { version = "0.31.0", features = ["postgres-rustls"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "utils"] }
tokio = "1.26.0"
tracing = "0.1.37"
serde = { version = "1.0.190", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
sqlx-cli = "0.7.2"
